[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bunnydns"
dynamic = ["version"]
description = "Python SDK for the Bunny.net DNS API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Franz Schwartau", email = "franz@electromail.org" },
]
keywords = ["bunny", "dns", "api", "sdk", "bunnycdn"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Name Service (DNS)",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23",
    "ruff>=0.4.0",
    "mypy>=1.0",
    "types-requests",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=2.0",
]

[project.urls]
Homepage = "https://github.com/franzs/bunnydns"
Documentation = "https://bunnydns.readthedocs.io"
Repository = "https://github.com/franzs/bunnydns"
Issues = "https://github.com/franzs/bunnydns/issues"
Changelog = "https://github.com/franzs/bunnydns/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/bunnydns/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that hit the live Bunny DNS API (deselect with '-m \"not integration\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
